9/10 ゆかいとるーさんのサイト参考に改造

--- a/index.html
+++ b/index.html
@@ -2,22 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>A sad sexy imp</title>
 </head>
 <body>
-  <nav>
+  <nav class="position">
+
+            <li><a href="">Home</a></li>
+
+
+    </nav>
+    <div class = "header">
+      <div class = "header-logo">A Sad Sexy Imp</div>
+      <div class = "header-list">
+        <ul>
+          <li><a href="#Am I?" class="lovebtn"><i class="fa fa-heart fa-2x" aria-hidden="true"></i></a></li>
+          <li><a href="#Web" class="friendbtn"><i class="fa fa-handshake-o fa-2x" aria-hidden="true"></i></a></li>
+          <li><a href="#Contact" class="comedybtn"><i class="fa fa-smile-o fa-2x" aria-hidden="true"></i></a></li>
+          <li><a href="#日本語" class="fantasybtn"><i class="fa fa-fort-awesome fa-2x" aria-hidden="true"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  <!-- <nav>
     <ul class="con">
-      <li><a href="index.html">asaasexyimp</a></li>
-      <li><a href="http://facebook.com">facebook</a></li>
-      <li><a href="http://apple.com">apple</a></li>
+      <li><a href="index.html">A Sad Sexy Imp</a></li>
+      <li><a href="http://facebook.com">Am I?</a></li>
+      <li><a href="http://apple.com">Web</a></li>
+      <li><a href="http://apple.com">contact</a></li>
+      <li><a href="http://apple.com">日本語</a></li>
     </ul>
-  </nav>
+  </nav> -->
   <div class="con">
-    <img class "top-image" src="basic.png" alt="sorry" width="240">
+    <img class "top-image" src="img/basic.png" alt="sorry" width="240">
     <h1 class = "title">youtube</h1>
     <p class="description">自分の人生の出来事をまとめたいと思っています。</p>
     <a class="youtube" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">Youtube</a>
   </div>
+  <footer>
+    <p><small>© 2017 A Sad Sexy Imp</small></p>
+   </footer>
 </body>
 </html>
