--- a/index.html
+++ b/index.html
@@ -1,45 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
+
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="css/style.css">
-  <title>A sad sexy imp</title>
+  <meta charset = "utf-8">
+  <link rel = "stylesheet" href = "css/style.css">
+  <title> A Sad Sexy Imp </title>
 </head>
 <body>
-  <nav class="position">
-
-            <li><a href="">Home</a></li>
-
-
-    </nav>
-    <div class = "header">
-      <div class = "header-logo">A Sad Sexy Imp</div>
-      <div class = "header-list">
-        <ul>
-          <li><a href="#Am I?" class="lovebtn"><i class="fa fa-heart fa-2x" aria-hidden="true"></i></a></li>
-          <li><a href="#Web" class="friendbtn"><i class="fa fa-handshake-o fa-2x" aria-hidden="true"></i></a></li>
-          <li><a href="#Contact" class="comedybtn"><i class="fa fa-smile-o fa-2x" aria-hidden="true"></i></a></li>
-          <li><a href="#日本語" class="fantasybtn"><i class="fa fa-fort-awesome fa-2x" aria-hidden="true"></i></a></li>
-        </ul>
-      </div>
+  <header>
+    <div class = "header-logo"><a href="#top"> A Sad Sexy Imp </a></div>
+    <div class = "header-list">
+      <ul>
+        <li><a href = "#日本語">日本語</a></li>
+        <li><a href = "#Contact">Contact</a></li>
+        <li><a href = "#Web">Web</a></li>
+        <li><a href = "#AmI">Am I?</a></li>
+      </ul>
     </div>
-  <!-- <nav>
-    <ul class="con">
-      <li><a href="index.html">A Sad Sexy Imp</a></li>
-      <li><a href="http://facebook.com">Am I?</a></li>
-      <li><a href="http://apple.com">Web</a></li>
-      <li><a href="http://apple.com">contact</a></li>
-      <li><a href="http://apple.com">日本語</a></li>
+  </header>
+
+  <div class = "top">
+    <p class = "vision">TRY EVERYTHING</p>
+  </div>
+
+  <div class =  "AmI" id = "AmI">
+    <p>Your Friendly Neighborhood</p>
+    <ul>
+      <li>CAREER</li>
+      <li>SKILL</li>
+      <li>MIND</li>
     </ul>
-  </nav> -->
-  <div class="con">
-    <img class "top-image" src="img/basic.png" alt="sorry" width="240">
-    <h1 class = "title">youtube</h1>
-    <p class="description">自分の人生の出来事をまとめたいと思っています。</p>
-    <a class="youtube" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">Youtube</a>
+  </div>
+
+  <div class =  "Web" id = "Web">
+    <a class="Youtube" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">Youtube</a>
+    <a class="Blog" href="http://masakazu.hatenadiary.com/" target = "_blank">Blog</a>
+    <a class="Interview" href="http://www.yomiuri.co.jp/adv/seikei/interview07.html" target = "_blank">Interview</a>
+    <a class="App" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">App</a>
+    <a class="Spidey" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">Spidey</a>
+    <a class="Hitchhike" href="https://www.google.com/maps/d/u/0/edit?mid=1BJIj5oxWWEvXCs1r_ekW8SBvPpw&ll=36.47712043942998%2C136.06661500000007&z=5" target = "_blank">Hitchhike</a>
+    <a class="?" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">?</a>
+    <a class="3DCG" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">3DCG</a>
+  </div>
+
+  <div class = "contact" id = "Contact">
+
   </div>
   <footer>
-    <p><small>© 2017 A Sad Sexy Imp</small></p>
+    <p><small>©A Sad Sexy Imp</small></p>
    </footer>
+
+
 </body>
+
 </html>
