形だいぶ決まったバージョン 9/16

--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
 <head>
   <meta charset = "utf-8">
   <link rel = "stylesheet" href = "css/style.css">
-  <title> A Sad Sexy Imp </title>
+  <link rel="stylesheet" href="css/font-awesome.min.css" >
+  <title>A Sad Sexy Imp</title>
 </head>
+
 <body>
-  <header>
-    <div class = "header-logo"><a href="#top"> A Sad Sexy Imp </a></div>
-    <div class = "header-list">
-      <ul>
-        <li><a href = "#日本語">日本語</a></li>
-        <li><a href = "#Contact">Contact</a></li>
-        <li><a href = "#Web">Web</a></li>
-        <li><a href = "#AmI">Am I?</a></li>
-      </ul>
-    </div>
-  </header>
+  <nav class = "header">
+    <div class = "header-logo"><a href="#top" class = "topbtn"> A Sad Sexy Imp <img src = "img/basic.png" class = "img"></a></div>
+    <ul>
+      <li><a href = "#日本語" >日本語</a></li>
+      <li><a href = "#Contact" class = "contactbtn"><i class="fa fa-envelope-o" aria-hidden="true">Contact</i></a></li>
+      <li><a href = "#Web" class = "webbtn"><i class="fa fa-snowflake-o" aria-hidden="true">Web</i></a></li>
+      <li><a href = "#AmI" class = "amibtn"><i class="fa fa-address-card" aria-hidden="true">Am I?</i></a></li>
+    </ul>
+  </nav>
 
   <div class = "top">
-    <p class = "vision">TRY EVERYTHING</p>
+    <p class = "vision">CREATE ADVENTURE</p>
   </div>
 
   <div class =  "AmI" id = "AmI">
     <p>Your Friendly Neighborhood</p>
+    <div class = "space"></div>
     <ul>
       <li>CAREER</li>
       <li>SKILL</li>
@@ -33,22 +34,29 @@
   </div>
 
   <div class =  "Web" id = "Web">
-    <a class="Youtube" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">Youtube</a>
-    <a class="Blog" href="http://masakazu.hatenadiary.com/" target = "_blank">Blog</a>
-    <a class="Interview" href="http://www.yomiuri.co.jp/adv/seikei/interview07.html" target = "_blank">Interview</a>
-    <a class="App" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">App</a>
-    <a class="Spidey" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">Spidey</a>
-    <a class="Hitchhike" href="https://www.google.com/maps/d/u/0/edit?mid=1BJIj5oxWWEvXCs1r_ekW8SBvPpw&ll=36.47712043942998%2C136.06661500000007&z=5" target = "_blank">Hitchhike</a>
-    <a class="?" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">?</a>
-    <a class="3DCG" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">3DCG</a>
+    <p>Go! Go! Go Web Go!</p>
+    <ul>
+      <li><a class="Youtube" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">Youtube</a></li>
+      <li><a class="Blog" href="http://masakazu.hatenadiary.com/" target = "_blank">Blog</a></li>
+      <li><a class="Interview" href="http://www.yomiuri.co.jp/adv/seikei/interview07.html" target = "_blank">Interview</a></li>
+      <li><a class="App" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">App</a></li>
+      <li><a class="Spidey" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">Spidey</a></li>
+      <li><a class="Hitchhike" href="https://www.google.com/maps/d/u/0/edit?mid=1BJIj5oxWWEvXCs1r_ekW8SBvPpw&ll=36.47712043942998%2C136.06661500000007&z=5" target = "_blank">Hitchhike</a></li>
+      <li><a class="?" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">?</a></li>
+      <li><a class="3DCG" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">3DCG</a></li>
+    </ul>
   </div>
 
   <div class = "contact" id = "Contact">
-
+    <ul>
+      <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+      <li><a href="" target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+    </ul>
   </div>
+
   <footer>
     <p><small>©A Sad Sexy Imp</small></p>
-   </footer>
+  </footer>
 
 
 </body>
