完成に近づいた形

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 
 <head>
   <meta charset = "utf-8">
+  <link rel = "shortcut icon" href="img/logo.ico">
   <link rel = "stylesheet" href = "css/style.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css" >
+  <link rel = "stylesheet" href="css/font-awesome.min.css" >
   <title>A Sad Sexy Imp</title>
 </head>
 
 <body>
   <nav class = "header">
-    <div class = "header-logo"><a href="#top" class = "topbtn"> A Sad Sexy Imp <img src = "img/basic.png" class = "img"></a></div>
+    <div class = "header-logo"><a href="#top" class = "topbtn"> A Sad Sexy Imp </a></div>
     <ul>
       <li><a href = "#日本語" >日本語</a></li>
       <li><a href = "#Contact" class = "contactbtn"><i class="fa fa-envelope-o" aria-hidden="true">Contact</i></a></li>
@@ -24,33 +25,31 @@
   </div>
 
   <div class =  "AmI" id = "AmI">
+    <img style="max-width:100%" src="//cdn.thinglink.me/api/image/965889529787449345/1024/10/scaletowidth#tl-965889529787449345;'" class="alwaysThinglink"/><script async charset="utf-8" src="//cdn.thinglink.me/jse/embed.js"></script>
     <p>Your Friendly Neighborhood</p>
-    <div class = "space"></div>
     <ul>
-      <li>CAREER</li>
-      <li>SKILL</li>
-      <li>MIND</li>
+      <li class = "shake">CAREER</li>
+      <li class = "shake">SKILL</li>
+      <li class = "shake">MIND</li>
     </ul>
   </div>
 
   <div class =  "Web" id = "Web">
-    <p>Go! Go! Go Web Go!</p>
-    <ul>
-      <li><a class="Youtube" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">Youtube</a></li>
-      <li><a class="Blog" href="http://masakazu.hatenadiary.com/" target = "_blank">Blog</a></li>
-      <li><a class="Interview" href="http://www.yomiuri.co.jp/adv/seikei/interview07.html" target = "_blank">Interview</a></li>
-      <li><a class="App" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">App</a></li>
-      <li><a class="Spidey" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">Spidey</a></li>
-      <li><a class="Hitchhike" href="https://www.google.com/maps/d/u/0/edit?mid=1BJIj5oxWWEvXCs1r_ekW8SBvPpw&ll=36.47712043942998%2C136.06661500000007&z=5" target = "_blank">Hitchhike</a></li>
-      <li><a class="?" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">?</a></li>
-      <li><a class="3DCG" href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">3DCG</a></li>
+    <p class="float">Go! Go! Go Web Go!</p>
+    <ul class = "contents">
+      <li class="Youtube"><a  href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">Youtube</a></li>
+      <li class="Blog"><a  href="http://masakazu.hatenadiary.com/" target = "_blank">Blog/Ja</a></li>
+      <li class="Blog"><a  href="https://masaaustraliandialy.blogspot.com/" target = "_blank">Blog/En</a></li>
+      <li class="Media"><a  href="http://www.yomiuri.co.jp/adv/seikei/interview07.html" target = "_blank">Media</a></li>
+      <li class="Hitchhike"><a  href="https://www.google.com/maps/d/u/0/edit?mid=1BJIj5oxWWEvXCs1r_ekW8SBvPpw&ll=36.47712043942998%2C136.06661500000007&z=5" target = "_blank">Hitchhike</a></li>
     </ul>
   </div>
 
-  <div class = "contact" id = "Contact">
+  <div class = "Contact" id = "Contact">
+    <p>CONTACT</p>
     <ul>
-      <li><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-      <li><a href="" target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+      <li><a href="http://facebook.com/masakazumarvel" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+      <li><a href="mailto:asadsexyimp@gmail.com" target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
     </ul>
   </div>
 
