--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel = "shortcut icon" href="img/logo.ico">
   <link rel = "stylesheet" href = "css/style.css">
   <link rel = "stylesheet" href="css/font-awesome.min.css" >
+  <script src="js/jquery-3.2.1.min.js"></script>
   <title>A Sad Sexy Imp</title>
 </head>
 
@@ -13,23 +14,20 @@
   <nav class = "header">
     <div class = "header-logo"><a href="#top" class = "topbtn"> A Sad Sexy Imp </a></div>
     <ul>
-      <li><a href = "#日本語" >日本語</a></li>
-      <li><a href = "#Contact" class = "contactbtn"><i class="fa fa-envelope-o" aria-hidden="true">Contact</i></a></li>
-      <li><a href = "#Web" class = "webbtn"><i class="fa fa-snowflake-o" aria-hidden="true">Web</i></a></li>
-      <li><a href = "#AmI" class = "amibtn"><i class="fa fa-address-card" aria-hidden="true">Am I?</i></a></li>
+      <li><a href = "#Contact" class = "contactbtn">Contact</a></li>
+      <li><a href = "#Web" class = "webbtn">Web</a></li>
+      <li><a href = "#AmI" class = "amibtn">Am I?</a></li>
     </ul>
   </nav>
 
-  <div class = "top">
-    <p class = "vision">CREATE ADVENTURE</p>
-  </div>
+  <div class = "top"></div>
 
   <div class =  "AmI" id = "AmI">
     <p>Your Friendly Neighborhood</p>
-    <ul>
-      <li class = "shake">CAREER</li>
-      <li class = "shake">SKILL</li>
-      <li class = "shake">MIND</li>
+    <ul id="identity">
+      <li class = "shake" data-text="ツールチップ1">CAREER</li>
+      <li class = "shake" data-text="ツールチップ1">SKILL</li>
+      <li class = "shake" data-text="ツールチップ1">MIND</li>
     </ul>
   </div>
 
