--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
   <div class =  "AmI" id = "AmI">
     <p>Your Friendly Neighborhood</p>
     <ul id="identity">
-      <li><span id="career">CAREER</span></li>
-      <li><span id="skill">SKILL</span></li>
-      <li><span id="mind">MIND</span></li>
+      <li id="career">CAREER</li>
+      <li id="skill">SKILL</li>
+      <li id="mind">MIND</li>
     </ul>
   </div>
 
