リスポンシブ

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </div>
 
   <div class =  "Web" id = "Web">
-    <p class="float">Go! Go! Go Web Go!</p>
+    <p>Go! Go! Go Web Go!</p>
     <ul class = "contents">
       <li class="Youtube"><a  href="https://www.youtube.com/channel/UCUwe_HaOMhG1-4hpL-OhYcA" target = "_blank">Youtube</a></li>
       <li class="Blog"><a  href="http://masakazu.hatenadiary.com/" target = "_blank">Blog/Ja</a></li>
