--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
       <li class="Blog"><a  href="https://masaaustraliandialy.blogspot.com/" target = "_blank">Blog/En</a></li>
       <li class="Media"><a  href="http://www.yomiuri.co.jp/adv/seikei/interview07.html" target = "_blank">Media</a></li>
       <li class="Hitchhike"><a  href="https://www.google.com/maps/d/u/0/edit?mid=1BJIj5oxWWEvXCs1r_ekW8SBvPpw&ll=36.47712043942998%2C136.06661500000007&z=5" target = "_blank">Hitchhike</a></li>
+      <li class="Media2"><a  href="https://www.facebook.com/ICTEUQ/posts/1879717082055864" target = "_blank">Media</a></li>
     </ul>
   </div>
 
